# mdps-tropess-deploy

./: .gitignore  build_applications.py  dotenv-example  environment.yml  init_data_services.py  localize_stage_in.sh  pyproject.toml  requirements.txt  trigger_app.py
mdps-muses-data-ingest/: example_job_input.json  process-unity-dev.cwl  process-unity-ops.cwl  process-unity-test.cwl  process.cwl  stage_in.json
py-tropess/: example_job_input.json  process-unity-dev.cwl  process-unity-ops.cwl  process-unity-test.cwl  process.cwl  stage_in.json
scripts/: localize_stage_in  test_cwl
tropess_deploy/cmd/: build_applications.py  init_data_services.py  query_data.py  trigger_app.py
tropess_deploy/data/: tool.py
tropess_deploy/mdps/: tool.py
